# uclinux

./: .config  .config.old  .gitignore  .gitmodules  .oldconfig  HISTORY  MAKEALL  Makefile  README  ReleaseNotes  ReleaseNotes-Alpha2  ReleaseNotes-Beta1  autoconf.h  config.in  do-build  do-release  do-tag  do_build  history.txt  prune_dirs  release_notes
lib/dirac/dirac-1.0.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  bootstrap  configure  configure.ac  dirac.pc.in
lib/faad2/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configlog  configure  configure.in  faad2.spec  libtool  ltmain.sh
lib/faad2/aacDECdrop/: audio.c  decode.c  main.c
lib/faad2/autom4te.cache/: output.0  requests  traces.0
lib/faad2/common/: Makefile  Makefile.in
lib/faad2/faad2-2.0/: Makefile.in  aclocal.m4  config.h.in
lib/faad2/frontend/: Makefile  Makefile.in  audio.c  audio.h  faad.dsp  main.c
lib/faad2/include/: faad.h
lib/faad2/libfaad/: Makefile  Makefile.in  bits.h  cfft.c  common.h  decoder.c  decoder.h  error.c  error.h  filtbank.c  hcr.c  huffman.c  iq_table.h  is.c  mdct.h  mp4.c  output.h  pns.c  pulse.c  sbr_dct.c  sbr_dct.h  sbr_e_nf.c  sbr_e_nf.h  sbr_fbt.c  sbr_hfadj.c  sbr_hfadj.h  sbr_tf_grid.c  structs.h  syntax.c  tns.c
lib/faad2/patches/: faad2-2.0-bfin-use-fixed-point.patch
lib/faad2/plugins/: Makefile  Makefile.in
lib/libgsasl/libgsasl-0.2.21/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README-alpha  THANKS  aclocal.m4  config.h.in  configure  configure.ac  libgsasl.pc.in
lib/libgsasl/libgsasl-1.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  cfg.mk  config.h.in  configure  configure.ac  libgsasl.pc.in  maint.mk
lib/libidn/libidn-1.5/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac
lib/libipod/examples/: Makefile.am  dumptracks.c
lib/libipod/libipod-0.1/: AUTHORS  Makefile.am  Makefile.cleanup  NEWS  README  config.h.in  configure.ac  reconf
lib/libipod/src/: Makefile.am  ipod_atom_mhbd.h  ipod_atom_mhip.h  ipod_atom_mhit.c  ipod_atom_mhlp.h  ipod_atom_mhyp.c  ipod_atom_pqed.h  ipod_file_utils.c  ipod_private_constants.h
lib/libnetfilter_conntrack/: Make_global.am  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  makefile
lib/libnetfilter_conntrack/debian/: changelog  control  copyright  libnetfilter-conntrack1.install  rules
lib/libnetfilter_conntrack/extensions/: Makefile.am  Makefile.in
lib/libnetfilter_conntrack/include/: Makefile.am  Makefile.in
lib/libnetfilter_conntrack/l3extensions/: Makefile.am  Makefile.in
lib/libnetfilter_conntrack/src/: Makefile.am  Makefile.in  libnetfilter_conntrack.c
lib/libnetfilter_conntrack/utils/: Makefile.am  Makefile.in  ctnl_test.c
lib/mpfr/: BUGS  ChangeLog  FAQ.html  INSTALL  Makefile  Makefile.in  NEWS  README  add.c  add1.c  add_ui.c  agm.c  atanh.c  cbrt.c  clear.c  clears.c  cmp.c  cmp2.c  cmp_d.c  cmp_ld.c  cmp_si.c  cmp_ui.c  config.status  config.sub  configure  configure.in  const_log2.c  const_pi.c  copysign.c  cos.c  cosh.c  dim.c  div.c  div_2exp.c  div_2si.c  div_2ui.c  div_ui.c  eq.c  exceptions.c  exp2.c  (+93 more)
lib/mpfr/.deps/: acos.Po  acosh.Po  add.Po  add1.Po  add1sp.Po  add_one_ulp.Po  add_ui.Po  agm.Po  asin.Po  asinh.Po  atan.Po  atanh.Po  cache.Po  cbrt.Po  check.Po  clear.Po  clears.Po  cmp.Po  cmp2.Po  cmp_abs.Po  cmp_d.Po  cmp_ld.Po  cmp_si.Po  cmp_ui.Po  comparisons.Po  const_euler.Po  const_log2.Po  const_pi.Po  copysign.Po  cos.Po  cosh.Po  dim.Po  div.Po  div_2exp.Po  div_2si.Po  div_2ui.Po  div_ui.Po  dump.Po  eq.Po  erf.Po  (+125 more)
lib/mpfr/autom4te.cache/: output.1  requests  traces.0  traces.1
lib/mpfr/mpfr-2.1.2/: Makefile.am  TODO  acinclude.m4  acos.c  acosh.c  add1sp.c  add_one_ulp.c  asin.c  asinh.c  atan.c  cache.c  check.c  cmp_abs.c  comparisons.c  const_euler.c  dump.c  erf.c  exp.c  exp10.c  expm1.c  fits_u.h  free_cache.c  gamma.c  get_exp.c  get_ld.c  get_si.c  get_ui.c  get_uj.c  log10.c  log1p.c  log2.c  mpfr-test.h  mpn_exp.c  mul_2exp.c  mul_2si.c  mul_ui.c  neg.c  pow_si.c  print_raw.c  reldiff.c  (+14 more)
lib/mpfr/mpfr-2.3.0_p4/: Makefile.am  Makefile.in  PATCHES  VERSION  acosh.c  atan2.c  mpfr.texi  subnormal.c  version.c
lib/mpfr/mpfr-2.3.1/: BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  add1sp.c  configure  configure.in  div.c  div_2si.c  div_2ui.c  exceptions.c  exp.c  exp3.c  exp_2.c  fma.c  fms.c  hypot.c  mpfr-gmp.c  mpfr-gmp.h  mpfr-impl.h  mpfr.texi  mul.c  mul_2si.c  pow.c  pow_si.c  pow_ui.c  pow_z.c  sub1sp.c  sum.c  version.c
lib/mpfr/mpfr-2.3.2/: strtofr.c
lib/mpfr/mpfr-2.4.0/: PATCHES  VERSION  acinclude.m4  configure  mpfr.h  version.c
lib/mpfr/mpfr-2.4.1/: ChangeLog  FAQ.html  INSTALL  NEWS  PATCHES  VERSION  configure.in  mpfr.h  mpfr.info  mpfr.texi  rem1.c  vasprintf.c  version.c
lib/mpfr/tests/: Makefile  Makefile.in  cmp_str.c  memory.c  reuse.c  tabs.c  tadd.c  tadd1sp.c  tadd_ui.c  tasin.c  tasinh.c  tcbrt.c  tcheck.c  tcmp2.c  tcmp_d.c  tcmp_ld.c  tcmp_ui.c  tcmpabs.c  tconst_euler.c  tconst_log2.c  tcopysign.c  tcos.c  tdim.c  tdiv_ui.c  terf.c  texp.c  texp2.c  texpm1.c  tfactorial.c  tfrac.c  tgamma.c  tgeneric.c  tget_str.c  tget_z.c  thypot.c  tisnan.c  tlog.c  tlog10.c  tlog2.c  tminmax.c  (+26 more)
lib/openobex/openobex-1.3.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.win32  acinclude.m4  aclocal.m4  config.h.in  config.h.win32  configure  configure.in  makefile.msc  makefile.msc.rules  (+4 more)
user/conntrack/: AUTHORS  configure  configure.in  conntrack.8  makefile
user/conntrack-tools/: ChangeLog  Makefile.am  Makefile.in
user/ethtool/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  amd8111e.c  config.h.in  configure  configure.in  de2104x.c  e1000.c  ethtool-copy.h  ethtool.8  ethtool.spec  mkinstalldirs  realtek.c  tg3.c
user/snort/: ChangeLog  Makefile.am  Makefile.in  RELEASE.NOTES  aclocal.m4  config.h.in  configure  configure.in  makefile  snort.8  verstuff.pl
(+43050 files in other folders)
