dnl Process this file with autoconf to produce a configure script.
AC_INIT(ethtool.c)
AM_INIT_AUTOMAKE(ethtool, 1.8)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_HEADERS

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS(sys/ioctl.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_HEADER_STDC
AC_CHECK_FUNCS(socket strtol)

AC_OUTPUT(Makefile ethtool.spec)
